# GeomPreProcessorGit

./: 01_gap_between_faces.step  02_overlapping_faces.step  03_open_shell_missing_face.step  04_tiny_face.step  05_inverted_normals.step  06_degenerate_edge.step  07_self_intersection.step  08_non_manifold_vertex.step  09_short_edge.step  CMakeLists.txt  README.md
config/: FindParasolid.cmake
docs/: README.md  USER_GUIDE.md
include/core/: BeamExtractEngine.h  CheckRepairEngine.h  FaceRemoveEngine.h  PatchingEngine.h  PsKernel.h  SewingEngine.h
include/geometry/: PsBody.h  PsEdge.h  PsFace.h  PsTypes.h  PsVertex.h
include/io/: PsExporter.h  PsImporter.h  PsSTEPExporter.h  PsSTEPImporter.h  PsXTImporter.h
include/ui/: BeamExtractDialog.h  CheckResultDialog.h  FaceRemoveDialog.h  IssueTableModel.h  MainWindow.h  ModelTree.h  PatchingDialog.h  ProgressDialog.h  PropertyPanel.h  SewingDialog.h  Viewport3D.h
resources/: resources.qrc
src/: main.cpp
src/core/: BeamExtractEngine.cpp  CheckRepairEngine.cpp  FaceRemoveEngine.cpp  PatchingEngine.cpp  PsKernel.cpp  SewingEngine.cpp
src/geometry/: PsBody.cpp  PsEdge.cpp  PsFace.cpp  PsGeometryUtils.cpp  PsVertex.cpp
src/io/: PsSTEPExporter.cpp  PsSTEPImporter.cpp  PsXTImporter.cpp
src/ui/: BeamExtractDialog.cpp  CheckResultDialog.cpp  FaceRemoveDialog.cpp  IssueTableModel.cpp  MainWindow.cpp  ModelTree.cpp  PatchingDialog.cpp  ProgressDialog.cpp  PropertyPanel.cpp  SewingDialog.cpp  Viewport3D.cpp
tests/: CMakeLists.txt  test_beam_extract.cpp  test_check_repair.cpp  test_face_remove.cpp  test_main.cpp  test_patching.cpp  test_sewing.cpp
